<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context=".HomeActivity">

    <FrameLayout
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/empty_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_required_title"
            android:lineSpacingMultiplier="1.5"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/empty_message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/login_required_message"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:textSize="16sp" />
        <Button
            android:id="@+id/empty_action_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/login_action_title"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="16sp"
            android:onClick="onEmptyButtonClick" />

    </LinearLayout>

    </LinearLayout>
